--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,9 @@
 body {
+
     font-family: monospace;
-    margin: 0;
-    padding: 0;
+    font-weight: normal;
     background-color: #ccea0a;
-   
+    font-size: 16px;
+    
 }
 
